--- a/src/template.j2
+++ b/src/template.j2
@@ -60,7 +60,6 @@
       return Array.from(
         document.getElementsByClassName(class_name)
       ).map((element) => {
-        console.log(parseInt(element.dataset.min, 10))
         if (compare_value >= parseInt(element.dataset.min, 10)) {
           return parseInt(element.dataset.value, 10)
         }
@@ -114,6 +113,58 @@
     <h1>Rodger Roller</h1>
     <p>This is my custom character sheet and dice roller for my Bunkers And Badasses character. </p>
 
+    <table>
+      <tr>
+        <td>Level:</td>
+        <td>{{level}}</td>
+      </tr>
+      <tr>
+        <td>Badass Rank:</td>
+        <td>{{badass_rank}}</td>
+      </tr>
+      <tr>
+        <td>Badass Tokens:</td>
+        <td>{{badass_tokens}}</td>
+      </tr>
+      <tr>
+        <td>Gold:</td>
+        <td>{{gold}}</td>
+      </tr>
+      <tr>
+        <td>Current Health:</td>
+        <td>{{health.current}}</td>
+      </tr>
+      <tr>
+        <td>Max Health:</td>
+        <td>{{health.max}}</td>
+      </tr>
+      <tr>
+        <td>Health Regen:</td>
+        <td>{{health.regen}}</td>
+      </tr>
+      <tr>
+        <td>Current Shields:</td>
+        <td>{{shields.current}}</td>
+      </tr>
+      <tr>
+        <td>Max Shields:</td>
+        <td>{{shields.max}}</td>
+      </tr>
+      <tr>
+        <td>Shield Regen:</td>
+        <td>{{shields.regen}}</td>
+      </tr>
+      <tr>
+        <td>Shield Type:</td>
+        <td>{{shields.type}}</td>
+      </tr>
+      <tr>
+        <td>Shield Info:</td>
+        <td>{{shields.info}}</td>
+      </tr>
+
+    </table>
+
     <h2>Accuracy Roll</h2>
     <div class="flex">
       <table>
@@ -151,6 +202,10 @@
         {% set gunIndex = loop.index0 %}
         <tr>
           <td colspan="2">{{ gun.name }}</td>
+        </tr>
+        <tr>
+          <td>Type: </td>
+          <td>{{ gun.type}}</td>
         </tr>
         <tr>
           <td>Range: </td>
@@ -201,44 +256,72 @@
     </div>
 
     <h2>Core</h2>
-    <div>
-      <div>Accuracy: <span id="Accuracy_Base"></span> Mod: <span id="Accuracy_Mod"></span></div>
-      <div>Damage: <span id="Damage_Base"></span> Mod: <span id="Damage_Mod"></span></div>
-      <div>Mastery: <span id="Mastery_Base"></span> Mod: <span id="Mastery_Mod"></span></div>
-      <div>Speed: <span id="Speed_Base"></span> Mod: <span id="Speed_Mod"></span></div>
-    </div>
+    <table>
+      <tr>
+        <td>Accuracy: </td>
+        <td id="Accuracy_Base"></td>
+        <td>Mod:
+        <td id="Accuracy_Mod"></td>
+      </tr>
+      <tr>
+        <td>Damage: </td>
+        <td id="Damage_Base"></td>
+        <td>Mod:
+        <td id="Damage_Mod"></td>
+      </tr>
+      <tr>
+        <td>Mastery: </td>
+        <td id="Mastery_Base"></td>
+        <td>Mod:
+        <td id="Mastery_Mod"></td>
+      </tr>
+      <tr>
+        <td>Speed: </td>
+        <td id="Speed_Base"></td>
+        <td>Mod:
+        <td id="Speed_Mod"></td>
+      </tr>
+    </table>
 
     <h2>Archetype: Deadeye</h2>
-    <div class="stat_row">
+    <table>
       {% for key in archetype_stats %}
-      <div>{{ key }}: <input class="{{ key }}" type="text" size="2" value="{{ archetype_stats[key] }}" disabled />
-      </div>
+      <tr>
+        <td>{{ key }}: </td>
+        <td><input class="{{ key }}" type="text" size="2" value="{{ archetype_stats[key] }}" disabled /></td>
+      </tr>
       {% endfor %}
-    </div>
+    </table>
 
     <h2>Class: Hunter</h2>
-    <div class="stat_row">
+    <table>
       {% for key in class_stats %}
-      <div>{{ key }}: <input class="{{ key }}" type="text" size="2" value="{{ class_stats[key] }}" disabled /></div>
+      <tr>
+        <td>{{ key }}:</td>
+        <td><input class="{{ key }}" type="text" size="2" value="{{ class_stats[key] }}" disabled /></td>
+      </tr>
       {% endfor %}
-    </div>
+    </table>
 
     <h2>Background: Prize Shot</h2>
-    <div class="stat_row">
+    <table>
       {% for key in background_stats %}
-      <div>{{ key }}: <input class="{{ key }}" type="text" size="2" value="{{ background_stats[key] }}" disabled />
-      </div>
+      <tr>
+        <td>{{ key }}: </td>
+        <td><input class="{{ key }}" type="text" size="2" value="{{ background_stats[key] }}" disabled /></td>
+      </tr>
       {% endfor %}
-    </div>
+    </table>
 
     <h2>Action Skill</h2>
+    <div>{{action_skill.name}}</div>
     <div>TODO: Add tickmarks for single use in combat and number per day equaly to mastery mod</div>
 
     <h2>Favored Gun</h2>
-    <div>Sniper Rifle</div>
+    <div>{{ favored_gun }}</div>
 
     <h2>Skill Tree</h2>
-    <div>TODO</div>
+    <div>TODO: Caliber (+1 DMG on favored guns and +1/SL on Search Checks)</div>
 
     <h2>Melee Die</h2>
     <div>1D4</div>
