--- a/src/template.j2
+++ b/src/template.j2
@@ -34,8 +34,8 @@
       return Array.from(
         document.getElementsByClassName(class_name)
       ).map((element) => {
-        if (element.value) {
-          return parseInt(element.value, 10)
+        if (element.dataset.value) {
+          return parseInt(element.dataset.value, 10)
         }
         else {
           return 0
@@ -162,7 +162,6 @@
         <td>Shield Info:</td>
         <td>{{shields.info}}</td>
       </tr>
-
     </table>
 
     <h2>Accuracy Roll</h2>
@@ -214,8 +213,7 @@
         {% for stat in gun.stats %}
         <tr>
           <td>{{ stat.stat }}:</td>
-          <td><input type="text" class="{{ stat.stat }}_gun{{ gunIndex }}" value="{{ stat.mod }}" size="2" disabled />
-          </td>
+          <td class="{{ stat.stat }}_gun{{ gunIndex }}" data-value="{{ stat.mod }}">{{ stat.mod }}</td>
         </tr>
         {% endfor %}
 
@@ -288,7 +286,7 @@
       {% for key in archetype_stats %}
       <tr>
         <td>{{ key }}: </td>
-        <td><input class="{{ key }}" type="text" size="2" value="{{ archetype_stats[key] }}" disabled /></td>
+        <td class="{{ key }}" data-value="{{ archetype_stats[key] }}">{{ archetype_stats[key] }}</td>
       </tr>
       {% endfor %}
     </table>
@@ -298,7 +296,7 @@
       {% for key in class_stats %}
       <tr>
         <td>{{ key }}:</td>
-        <td><input class="{{ key }}" type="text" size="2" value="{{ class_stats[key] }}" disabled /></td>
+        <td class="{{ key }}" data-value="{{ class_stats[key] }}">{{class_stats[key]}}</td>
       </tr>
       {% endfor %}
     </table>
@@ -308,7 +306,7 @@
       {% for key in background_stats %}
       <tr>
         <td>{{ key }}: </td>
-        <td><input class="{{ key }}" type="text" size="2" value="{{ background_stats[key] }}" disabled /></td>
+        <td class="{{ key }}" data-value="{{ background_stats[key] }}">{{background_stats[key]}}</td>
       </tr>
       {% endfor %}
     </table>
