--- a/src/template.j2
+++ b/src/template.j2
@@ -78,10 +78,10 @@
 
     const roll_accuracy = (event) => {
       s.Gun_Number = parseInt(event.target.dataset.gun, 10)
-      s.Gun_Accuracy_Mod = get_stat_total(`Accuracy_gun${s.Gun_Number}`)
-      s.Toggled_Accuracy = get_toggle_total(`Accuracy_gun${s.Gun_Number}_toggle`)
+      s.Gun_Accuracy_Mod = get_stat_total(`Gun_Accuracy_Mod__gun${s.Gun_Number}`)
+      s.Toggled_Accuracy = get_toggle_total(`Gun_Accuracy_Mod__gun${s.Gun_Number}_toggle`)
       s.Accuracy_Adjustment = s.Gun_Accuracy_Mod + s.Toggled_Accuracy
-      s.Is_Favored_Gun_Type = document.getElementById(`Is_Favored_Gun_Type_gun${s.Gun_Number}`).innerHTML
+      s.Is_Favored_Gun_Type = document.getElementById(`Is_Favored_Gun_Type__gun${s.Gun_Number}`).innerHTML
       if (s.Is_Favored_Gun_Type === "yes") {
         s.Accuracy_Adjustment += s.Accuracy_Mod
       }
@@ -134,7 +134,6 @@
     <p>This is my custom character sheet and dice roller for my Bunkers And Badasses character. </p>
 
     <div class="flex cards">
-
       <table>
         <tr>
           <td>Level:</td>
@@ -228,10 +227,10 @@
       <table class="gun_details">
         {% set gunIndex = loop.index0 %}
         <tr>
-          <td colspan="2">{{ gun.name }}</td>
+          <td colspan="2">{{ gun.guild}} Guild</td>
         </tr>
         <tr>
-          <td colspan="2">{{ gun.guild}} Guild</td>
+          <td colspan="2">{{ gun.name }}</td>
         </tr>
         <tr>
           <td>Type:</td>
@@ -239,7 +238,8 @@
         </tr>
         <tr>
           <td>Favored:</td>
-          <td id="Is_Favored_Gun_Type_gun{{gunIndex}}">{% if favored_gun_type.type == gun.type %}yes{% else %}no{% endif
+          <td id="Is_Favored_Gun_Type__gun{{gunIndex}}">{% if favored_gun_type.type == gun.type %}yes{% else %}no{%
+            endif
             %}</td>
         </tr>
         <tr>
@@ -254,15 +254,16 @@
         {% endfor %}
         {% for stat in gun.stats %}
         <tr>
-          <td>Bonus {{ stat.stat }}:</td>
-          <td class="{{ stat.stat }}_gun{{ gunIndex }}" data-value="{{ stat.mod }}">{{ stat.mod }}</td>
+          <td>{{ stat.stat }}:</td>
+          <td class="{{ stat.stat }}__gun{{ gunIndex }}" data-value="{{stat.value}}">{{ stat.value }}</td>
         </tr>
         {% endfor %}
 
         {% for toggle in gun.toggles %}
         <tr>
           <td>{{ toggle.name }}</td>
-          <td><input type="checkbox" class="{{toggle.stat}}_gun{{gunIndex}}_toggle" data-value="{{toggle.mod}}" checked>
+          <td><input type="checkbox" class="{{toggle.stat}}__gun{{gunIndex}}_toggle" data-value="{{toggle.value}}"
+              checked>
           </td>
         </tr>
         {% endfor %}
